--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -1,6 +1,6 @@
-//--------EBMS 新按钮样式---------------------------
+//--------My 新按钮样式---------------------------
 //新增按钮
-.EBMSCreateButton {
+.MyCreateButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%) !important;
   background-color: #599bb3 !important;
@@ -14,20 +14,20 @@
   text-shadow: 0px 1px 0px #3d768a !important;
 }
 
-.EBMSCreateButton:hover {
+.MyCreateButton:hover {
   background: linear-gradient(to bottom, #408c99 5%, #599bb3 100%) !important;
   background-color: #408c99 !important;
   color: #ffffff;
 }
 
-.EBMSCreateButton:active {
+.MyCreateButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //查询按钮
-.EBMSQueryButton {
+.MyQueryButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #6facea 5%, #378de5 100%) !important;
   background-color: #6facea !important;
@@ -41,20 +41,20 @@
   text-shadow: 0px 1px 0px #3d768a !important;
 }
 
-.EBMSQueryButton:hover {
+.MyQueryButton:hover {
   background: linear-gradient(to bottom, #378de5 5%, #6facea 100%) !important;
   background-color: #378de5 !important;
   color: #ffffff;
 }
 
-.EBMSQueryButton:active {
+.MyQueryButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //修改/编辑按钮
-.EBMSEditButton {
+.MyEditButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #7892c2 5%, #476e9e 100%) !important;
   background-color: #7892c2 !important;
@@ -68,20 +68,20 @@
   text-shadow: 0px 1px 0px #3d768a !important;
 }
 
-.EBMSEditButton:hover {
+.MyEditButton:hover {
   background: linear-gradient(to bottom, #476e9e 5%, #7892c2 100%) !important;
   background-color: #476e9e !important;
   color: #ffffff;
 }
 
-.EBMSEditButton:active {
+.MyEditButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //删除按钮
-.EBMSDeleteButton {
+.MyDeleteButton {
   box-shadow: inset 0px 1px 0px 0px #f29c93 !important;
   background: linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%) !important;
   background-color: #fe1a00 !important;
@@ -96,20 +96,20 @@
   text-shadow: 0px 1px 0px #b23e35 !important;
 }
 
-.EBMSDeleteButton:hover {
+.MyDeleteButton:hover {
   background: linear-gradient(to bottom, #ce0100 5%, #fe1a00 100%) !important;
   background-color: #ce0100 !important;
   color: #ffffff;
 }
 
-.EBMSDeleteButton:active {
+.MyDeleteButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //导入按钮
-.EBMSImportButton {
+.MyImportButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #7179a5 5%, #3e449e 100%) !important;
   background-color: #7179a5 !important;
@@ -123,20 +123,20 @@
   text-shadow: 0px 1px 0px #3d768a !important;
 }
 
-.EBMSImportButton:hover {
+.MyImportButton:hover {
   background: linear-gradient(to bottom, #3e449e 5%, #7179a5 100%) !important;
   background-color: #3e449e !important;
   color: #ffffff;
 }
 
-.EBMSImportButton:active {
+.MyImportButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //导出按钮
-.EBMSExportButton {
+.MyExportButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #52a99d 5%, #3a6475 100%) !important;
   background-color: #3a6475 !important;
@@ -151,20 +151,20 @@
   color: #ffffff;
 }
 
-.EBMSExportButton:hover {
+.MyExportButton:hover {
   background: linear-gradient(to bottom, #3a6475 5%, #52a99d 100%) !important;
   background-color: #3a6475 !important;
   color: #ffffff;
 }
 
-.EBMSExportButton:active {
+.MyExportButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //查看按钮
-.EBMSViewButton {
+.MyViewButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #85ca4d 5%, #5caf18 100%) !important;
   background-color: #85ca4d !important;
@@ -179,13 +179,13 @@
 
 }
 
-.EBMSViewButton:hover {
+.MyViewButton:hover {
   background: linear-gradient(to bottom, #5caf18 5%, #85ca4d 100%) !important;
   background-color: #5caf18 !important;
   color: #ffffff;
 }
 
-.EBMSViewButton:active {
+.MyViewButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
@@ -198,7 +198,7 @@
 }
 
 //保存按钮
-.EBMSSaveButton {
+.MySaveButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #ac6adc 5%, #466bc3 100%) !important;
   background-color: #ac6adc !important;
@@ -212,20 +212,20 @@
   text-shadow: 0px 1px 0px #3d768a !important;
 }
 
-.EBMSSaveButton:hover {
+.MySaveButton:hover {
   background: linear-gradient(to bottom, #466bc3 5%, #ac6adc 100%) !important;
   background-color: #466bc3 !important;
   color: #ffffff;
 }
 
-.EBMSSaveButton:active {
+.MySaveButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //生成按钮
-.EBMSGenerateButton {
+.MyGenerateButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #d8c97f 5%, #94b77b 100%) !important;
   background-color: #d8c97f !important;
@@ -239,20 +239,20 @@
   text-shadow: 0px 1px 0px #3d768a !important;
 }
 
-.EBMSGenerateButton:hover {
+.MyGenerateButton:hover {
   background: linear-gradient(to bottom, #94b77b 5%, #d8c97f 100%) !important;
   background-color: #94b77b !important;
   color: #ffffff;
 }
 
-.EBMSGenerateButton:active {
+.MyGenerateButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
 }
 
 //刷新按钮
-.EBMSRefreshButton {
+.MyRefreshButton {
   box-shadow: 0px 10px 14px -7px #16a77f !important;
   background: linear-gradient(to bottom, #6dbd2e 5%, #16a77f 100%) !important;
   background-color: #6dbd2e !important;
@@ -267,13 +267,13 @@
   color: #ffffff;
 }
 
-.EBMSRefreshButton:hover {
+.MyRefreshButton:hover {
   background: linear-gradient(to bottom, #16a77f 5%, #6dbd2e 100%) !important;
   background-color: #6dbd2e !important;
   color: #ffffff;
 }
 
-.EBMSRefreshButton:active {
+.MyRefreshButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
@@ -281,7 +281,7 @@
 
 
 //取消按钮
-.EBMSCancelButton {
+.MyCancelButton {
   box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #0abed6 5%, #409eff 100%) !important;
   background-color: #409eff !important;
@@ -296,13 +296,13 @@
   color: #ffffff;
 }
 
-.EBMSCancelButton:hover {
+.MyCancelButton:hover {
   background: linear-gradient(to bottom, #409eff 5%, #0abed6 100%) !important;
   background-color: #0abed6 !important;
   color: #ffffff;
 }
 
-.EBMSCancelButton:active {
+.MyCancelButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
@@ -321,7 +321,7 @@
 }
 
 //清除按钮
-.EBMSEliminateButton {
+.MyEliminateButton {
   box-shadow: 0px 10px 14px -7px #dc3023 !important;
   background: linear-gradient(to bottom, #b33a31 5%, #dc3023 100%) !important;
   background-color: #dc3023 !important;
@@ -335,14 +335,70 @@
   text-shadow: 0px 1px 0px #dc3023 !important;
 }
 
-.EBMSEliminateButton:hover {
+.MyEliminateButton:hover {
   background: linear-gradient(to bottom, #dc3023 5%, #b33a31 100%) !important;
   background-color: #dc3023 !important;
   color: #ffffff;
 }
 
-.EBMSEliminateButton:active {
+.MyEliminateButton:active {
   position: relative;
   top: 1px;
   color: #ffffff;
+}
+
+
+
+//重置按钮
+.MyResetButton {
+  box-shadow: 0px 10px 14px -7px #909399 !important;
+  background: linear-gradient(to bottom, #83878f 5%, #909399 100%) !important;
+  background-color: #909399 !important;
+  border-radius: 8px !important;
+  display: inline-block !important;
+  cursor: pointer;
+  color: #fff;
+  font-family: Arial;
+  font-weight: bold !important;
+  text-decoration: none !important;
+  text-shadow: 0px 1px 0px #909399 !important;
+}
+
+.MyResetButton:hover {
+  background: linear-gradient(to bottom, #909399 5%, #83878f 100%) !important;
+  background-color: #909399 !important;
+  color: #fff;
+}
+
+.MyResetButton:active {
+  position: relative;
+  top: 1px;
+  color: #fff;
+}
+
+//登录按钮
+.MyLoginButton {
+  box-shadow: 0px 10px 14px -7px #66b1ff !important;
+  background: linear-gradient(to bottom, #468dda 5%, #66b1ff 100%) !important;
+  background-color: #66b1ff !important;
+  border-radius: 8px !important;
+  display: inline-block !important;
+  cursor: pointer;
+  color: #fff;
+  font-family: Arial;
+  font-weight: bold !important;
+  text-decoration: none !important;
+  text-shadow: 0px 1px 0px #66b1ff !important;
+}
+
+.MyLoginButton:hover {
+  background: linear-gradient(to bottom, #66b1ff 5%, #468dda 100%) !important;
+  background-color: #66b1ff !important;
+  color: #fff;
+}
+
+.MyLoginButton:active {
+  position: relative;
+  top: 1px;
+  color: #fff;
 }
