--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -82,7 +82,7 @@
 
 //删除按钮
 .MyDeleteButton {
-  box-shadow: inset 0px 1px 0px 0px #f29c93 !important;
+  box-shadow: 0px 10px 14px -7px #276873 !important;
   background: linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%) !important;
   background-color: #fe1a00 !important;
   border-radius: 8px !important;
