--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -1,45 +1,9 @@
 
 
-// 滚动条隐藏
-// ::-webkit-scrollbar {
-//     width: 0 !important;
-//   }
-//   ::-webkit-scrollbar {
-//     width: 0 !important;height: 0;
-//   }
-
-/*修改滚动条样式*/
-
-// ::-webkit-scrollbar {
-//   width: 5px;
-//   height: 5px;
-//   /**/
-// }
-
-// ::-webkit-scrollbar-track {
-//   background: rgb(239, 239, 239);
-//   border-radius: 2px;
-// }
-
-// ::-webkit-scrollbar-thumb {
-//   background: #bfbfbf;
-//   border-radius: 10px;
-// }
-
-// ::-webkit-scrollbar-thumb:hover {
-//   background: rgb(138, 138, 138);
-// }
-
-// ::-webkit-scrollbar-corner {
-//   background: transparent;
-// }
-
-
-
 //针对谷歌浏览器Chrome/苹果Safari的滚动条样式修改
 ::-webkit-scrollbar {
   width: 10px;
-  height: 10px
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -65,4 +29,3 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(204, 175, 121, 0.8);
 }
-
